# cpp2rust

./: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  main.cpp
corrosion/cxxbridge_v1.0.160/: .crates.toml  .crates2.json
corrosion_generated/cxxbridge/cxxbridge-cpp/include/cxxbridge-cpp/: lib.h
corrosion_generated/cxxbridge/cxxbridge-cpp/src/: lib.cpp
rust/: Cargo.toml
rust/src/: lib.rs
